[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Khánh Pluto"]
license = "Khánh Pluto"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.17.7"
uvicorn = "^0.22.0"
python-slugify = "^8.0.4"
Unidecode = "^1.3.8"
loguru = "^0.6.0"
aiofiles = "^23.2.1"
PyYAML = "^6.0.1"
wget = "^3.2"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.6"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.20.3"
pytest-env = "^1.1.3"
httpx = "^0.23.3"
fastapi = "^0.101.0"
orjson = "^3.10.3"
pytest-sugar = "^0.9.7"
gunicorn = "^21.2.0"
poetry-plugin-up = "^0.4.0"
pydantic = "^2.7.1"
tritonclient = {extras = ["grpc"], version = "^2.46.0"}
opencv-python = "^4.9.0.80"
ultralytics = "^8.2.22"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pyflakes = "2.3.0"
flake8 = "3.9.1"
wemake-python-styleguide = "^0.17.0"
autoflake = "1.4"
mypy = "^1.10.0"
flake8-fixme = "^1.1.1"
docker = "^6.1.3"
asgi-lifespan = "^2.1.0"
autopep8 = "1.5.7"

[tool.pylint]
line-length = 120

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "app/tests"
filterwarnings = '''
  ignore::DeprecationWarning
'''
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=70
'''
env = ["SECRET_KEY=secret"]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
